--- a/Sprint Treads/Info.plist
+++ b/Sprint Treads/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Sprint Treads needs your location to track your run.</string>
 </dict>
 </plist>
